namespace Entities.Base
{
    public static class EntityAnimations
    {
        public const string Attack         = "Attack";
        public const string SpecialAttack  = "SpecialAttack";
        public const string Death          = "Death";
        public const string TriggerDeath   = "TriggerDeath";
        public const string RandomDeath    = "RandomDeath";
        public const string Countered      = "Countered";
        public const string Move           = "Velocity Z";
        public const string GetHit         = "GetHit";
        public const string GettingHitBack = "GetHitBack";
    }
}
